# freecasti

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  run.py  tmp_kaitai_blob_check.py  web.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  sysex_capture.yml
.github/workflows/: ci.yml  pages.yml
docs/: README.md  capture-guide.md  development.md  encoding-sources.md  kaitai-encode.md  manual-notes.md  parameter-catalog.md  rolloff-slopes.md
docs/reference/: preset_sheet.json  provided_labels.json
specification/: README.md  open-items.md  web_serialize_skeletons.json
tests/: conftest.py  kaitai_support.py  test_analyze.py  test_byte_map_links.py  test_corpus.py  test_decode_preset.py  test_doc_claims.py  test_doc_table_links.py  test_dump_codec.py  test_edit_dumps.py  test_encoding_table.py  test_encodings.py  test_favorites.py  test_frame.py  test_kaitai_encode.py  test_kaitai_roundtrip.py  test_kaitai_spec.py  test_kaitai_validation.py  test_markdown_links.py  test_menus_analysis.py  test_parameter_description.py  test_parameters_readme.py  test_preset_sheet_page.py  test_presets_json.py  test_prog_algorithms.py  test_register_blob.py  test_register_blob_docs.py  test_register_edit_dumps.py  test_system.py  test_types.py  test_unseen_values.py  test_web_ui_sync.py
web-ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+1152 files in other folders)
